19327
{noformat}
% qscalac sandbox/{Test.java,test.scala}
sandbox/Test.java:2: error: `;' expected but `{' found.
  public static int foo() {
                          ^
one error found
topic/scalap-lite ~/scala tail -n100 sandbox/{Test.java,test.scala}
==> sandbox/Test.java <==
public interface Test {
  public static int foo() {
  	return 42;
  }
}

class JavaTest {
	static {
		System.out.println(Test.foo());
	}
}

==> sandbox/test.scala <==
object Test {
  Foo.test()
}
{noformat}

See: http://docs.oracle.com/javase/tutorial/java/IandI/defaultmethods.html#static
